tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint16_31_random_one_less/serialized.ssz
ФH;хеdг,LtёsTМє0ЬZа™‰Sн~5щy;†па<ъn\ХЌр!›¬Э’38#)zуё